k8s-new/overlays/stage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: techhy-ecosystem-stage-service
  namespace: techhy-ecosystem-staging
  labels:
    app: techhy-ecosystem-stage
    environment: staging
    component: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: techhy-ecosystem-stage
    environment: staging
