k8s-new/overlays/stage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techhy-ecosystem-stage-ingress
  namespace: techhy-ecosystem-staging
  labels:
    app: techhy-ecosystem-stage
    environment: staging
    component: frontend
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  tls:
  - hosts:
    - stage.techhyecosystem.build.infra.gyber.org
    secretName: techhy-ecosystem-stage-tls
  rules:
  - host: stage.techhyecosystem.build.infra.gyber.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: techhy-ecosystem-stage-service
            port:
              number: 80
